[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/Mobius.gd" type="Script" id=2]
[ext_resource path="res://Objects/Mobius_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/logo.png" type="Texture" id=4]
[ext_resource path="res://Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/CameraFollow.gd" type="Script" id=6]
[ext_resource path="res://Scenes/CanvasController.gd" type="Script" id=7]
[ext_resource path="res://Objects/Domu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Bullets/Bullet-1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/domu-yellow.png" type="Texture" id=10]
[ext_resource path="res://Sprites/health.png" type="Texture" id=11]
[ext_resource path="res://Sprites/coin.png" type="Texture" id=12]
[ext_resource path="res://Sprites/domu-green.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Upgrades/speed.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Upgrades/bullet-2.png" type="Texture" id=16]
[ext_resource path="res://Objects/HealthBehind.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/health-empty.png" type="Texture" id=18]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=20]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Screen 1" type="Node2D" parent="."]

[node name="Backdrop" type="TileMap" parent="Screen 1"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( 327680, 9, 65536, 327681, 9, 65537, 327682, 9, 65537, 327683, 9, 65537, 327684, 9, 65538, 393216, 9, 65536, 393217, 9, 65537, 393218, 9, 65537, 393219, 9, 65537, 393220, 9, 65538, 458752, 9, 65536, 458753, 9, 65537, 458754, 9, 65537, 458755, 9, 65537, 458756, 9, 65538, 458766, 0, 1, 524302, 0, 65537 )

[node name="TileMap" type="TileMap" parent="Screen 1"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( -65536, 1610612736, 65537, -65535, 1610612736, 65537, -65534, 1610612736, 65537, -65533, 1610612736, 65537, -65532, 1610612736, 65537, -65531, 1610612736, 65537, -65530, 1610612736, 65537, -65529, 1610612736, 65537, -65528, 1610612736, 65537, -65527, 1610612736, 65537, -65526, 1610612736, 65537, -65525, 1610612736, 65537, -65524, 1610612736, 65537, -65523, 1610612736, 65537, -65522, 1610612736, 65537, 0, 1610612742, 65536, 1, 1610612736, 65537, 2, 1610612736, 65537, 3, 1610612736, 65537, 4, 1610612736, 65537, 5, 1610612736, 65537, 6, 1610612736, 65537, 7, 1610612744, 65537, 8, 1610612736, 1, 9, 1610612736, 1, 10, 1610612736, 1, 11, 1610612736, 1, 12, 1610612736, 1, 13, 1610612736, 1, 14, 1610612736, 1, 65536, 1610612736, 2, 65537, 1610612736, 1, 65538, 1610612736, 1, 65539, 1610612736, 1, 65540, 1610612736, 1, 65541, 1610612736, 1, 65542, 1610612736, 1, 65543, 1610612740, 0, 262144, 2, 0, 262145, 2, 1, 262146, 2, 1, 262147, 2, 1, 262148, 2, 2, 458760, 4, 0, 458761, 0, 1, 458762, 0, 1, 458763, 0, 1, 458764, 0, 1, 458765, 0, 1, 458766, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 8, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537 )

[node name="Frontdrop" type="TileMap" parent="Screen 1"]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 2, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65538, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65538, 458766, 0, 1, 524288, 6, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 6, 65536, 524302, 0, 65537 )

[node name="Frontdrop2" type="TileMap" parent="Screen 1"]
visible = false
position = Vector2( 1920, 0 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Sprite" type="Sprite" parent="Screen 1"]
position = Vector2( 719.35, 239.25 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 4 )

[node name="SpawnLocations" type="Node2D" parent="Screen 1"]
script = ExtResource( 20 )

[node name="Spawn2" type="VisibilityNotifier2D" parent="Screen 1/SpawnLocations"]
position = Vector2( 160, 192 )

[node name="Spawn5" type="VisibilityNotifier2D" parent="Screen 1/SpawnLocations"]
position = Vector2( 160, 448 )

[node name="Spawn7" type="VisibilityNotifier2D" parent="Screen 1/SpawnLocations"]
position = Vector2( 448, 384 )

[node name="Spawn8" type="VisibilityNotifier2D" parent="Screen 1/SpawnLocations"]
position = Vector2( 448, 192 )

[node name="Spawn9" type="VisibilityNotifier2D" parent="Screen 1/SpawnLocations"]
position = Vector2( 768, 256 )

[node name="Screen 2" type="Node2D" parent="."]
position = Vector2( 960, 0 )

[node name="Backdrop" type="TileMap" parent="Screen 2"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( 327684, 9, 0, 327688, 9, 2, 327692, 9, 0, 327693, 9, 1, 327694, 9, 1, 393220, 9, 65536, 393221, 9, 65537, 393222, 9, 65537, 393223, 9, 65537, 393224, 9, 65538, 393228, 9, 65536, 393229, 9, 65537, 393230, 9, 65537, 458756, 9, 65536, 458757, 9, 65537, 458758, 9, 65537, 458759, 9, 65537, 458760, 9, 65538, 458764, 9, 65536, 458765, 9, 65537, 458766, 9, 65537 )

[node name="TileMap2" type="TileMap" parent="Screen 2"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( -65536, 1610612736, 65537, -65535, 1610612736, 65537, -65534, 1610612736, 65537, -65533, 1610612736, 65537, -65532, 1610612736, 65537, -65531, 1610612736, 65537, -65530, 1610612736, 65537, -65529, 1610612736, 65537, -65528, 1610612736, 65537, -65527, 1610612736, 65537, -65526, 1610612736, 65537, -65525, 1610612736, 65537, -65524, 1610612736, 65537, -65523, 1610612736, 65537, -65522, 1610612736, 65537, 0, 1610612736, 1, 1, 1610612744, 65536, 2, 1610612744, 65537, 3, 1610612736, 1, 4, 1610612736, 1, 5, 1610612744, 65536, 6, 1610612744, 65537, 7, 1610612736, 1, 8, 1610612736, 1, 9, 1610612736, 1, 10, 1610612736, 1, 11, 1610612744, 65536, 12, 1610612736, 65537, 13, 1610612736, 65537, 14, 1610612736, 65537, 65537, 1610612740, 1, 65538, 1610612740, 0, 65541, 1610612740, 1, 65542, 1610612740, 0, 65547, 1610612740, 1, 65548, 1610612736, 1, 65549, 1610612736, 1, 65550, 1610612736, 1, 262148, 4, 0, 262149, 0, 1, 262150, 0, 1, 262151, 0, 1, 262152, 4, 1, 327684, 4, 65536, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131073, 327688, 4, 65537, 327692, 0, 0, 327693, 2, 1, 327694, 2, 2, 393228, 1, 65536, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 4, 1, 458763, 4, 0, 458764, 0, 65538, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 8, 65536, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 8, 65537, 524300, 6, 65536, 524301, 0, 1, 524302, 0, 1, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537 )

[node name="Frontdrop" type="TileMap" parent="Screen 2"]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 327684, 0, 65536, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65538, 327692, 0, 0, 327693, 0, 1, 327694, 0, 1, 393220, 0, 65536, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65538, 393228, 0, 65536, 393229, 0, 65537, 393230, 0, 65537, 458756, 0, 65536, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65538, 458764, 0, 65536, 458765, 0, 65537, 458766, 0, 65537, 524292, 6, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 6, 65536, 524300, 6, 65537, 524301, 0, 65537, 524302, 0, 65537 )

[node name="Frontdrop2" type="TileMap" parent="Screen 2"]
visible = false
position = Vector2( 960, 0 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="SpawnLocations2" type="Node2D" parent="Screen 2"]
script = ExtResource( 20 )

[node name="Spawn10" type="VisibilityNotifier2D" parent="Screen 2/SpawnLocations2"]
position = Vector2( 128, 256 )

[node name="Spawn11" type="VisibilityNotifier2D" parent="Screen 2/SpawnLocations2"]
position = Vector2( 448, 192 )

[node name="Spawn12" type="VisibilityNotifier2D" parent="Screen 2/SpawnLocations2"]
position = Vector2( 642, 450 )

[node name="Spawn13" type="VisibilityNotifier2D" parent="Screen 2/SpawnLocations2"]
position = Vector2( 866, 226 )

[node name="Screen 3" type="Node2D" parent="."]
position = Vector2( 1920, 0 )

[node name="Backdrop" type="TileMap" parent="Screen 3"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( 65544, 1610612745, 65538, 65545, 1610612745, 65537, 65546, 1610612745, 65536, 327680, 9, 1, 327681, 9, 1, 327682, 9, 1, 327683, 9, 1, 327684, 9, 2, 393216, 9, 65537, 393217, 9, 65537, 393218, 9, 65537, 393219, 9, 65537, 393220, 9, 65538, 458752, 9, 65537, 458753, 9, 65537, 458754, 9, 65537, 458755, 9, 65537, 458756, 9, 65538 )

[node name="TileMap3" type="TileMap" parent="Screen 3"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
format = 1
tile_data = PoolIntArray( -65536, 1610612736, 65537, -65535, 1610612736, 65537, -65534, 1610612736, 65537, -65533, 1610612736, 65537, -65532, 1610612736, 65537, -65531, 1610612736, 65537, -65530, 1610612736, 65537, -65529, 1610612736, 65537, -65528, 1610612736, 65537, -65527, 1610612736, 65537, -65526, 1610612736, 65537, -65525, 1610612736, 65537, -65524, 1610612736, 65537, -65523, 1610612736, 65537, -65522, 1610612736, 65537, 0, 1610612736, 65537, 1, 1610612736, 65537, 2, 1610612736, 65537, 3, 1610612736, 65537, 4, 1610612744, 65537, 5, 1610612736, 1, 6, 1610612736, 1, 7, 1610612736, 1, 8, 1610612736, 1, 9, 1610612736, 1, 10, 1610612736, 1, 11, 1610612736, 1, 12, 1610612736, 1, 13, 1610612736, 1, 14, 1610612736, 1, 65536, 1610612736, 1, 65537, 1610612736, 1, 65538, 1610612736, 1, 65539, 1610612736, 1, 65540, 1610612740, 0, 131080, 1610612738, 2, 131081, 1610612738, 1, 131082, 1610612738, 0, 262155, 1610612739, 0, 327682, 2, 0, 327683, 2, 1, 327684, 2, 2, 327693, 1610612739, 0, 393223, 7, 1, 458759, 3, 0, 458760, 7, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 0, 1, 524300, 0, 1, 524301, 0, 1, 524302, 0, 1, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537 )

[node name="Frontdrop" type="TileMap" parent="Screen 3"]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 2, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65538, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65538, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 6, 65536 )

[node name="Frontdrop2" type="TileMap" parent="Screen 3"]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 2
z_as_relative = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 640, 640 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 8, 1610612742, 65536, 9, 1610612736, 65537, 10, 1610612742, 65537, 65544, 1610612736, 65538, 65545, 1610612736, 65537, 65546, 1610612736, 65536, 131080, 1610612736, 2, 131081, 1610612736, 1, 131082, 1610612736, 0 )

[node name="SpawnLocations3" type="Node2D" parent="Screen 3"]
script = ExtResource( 20 )

[node name="Spawn14" type="VisibilityNotifier2D" parent="Screen 3/SpawnLocations3"]
position = Vector2( 224, 256 )

[node name="Spawn15" type="VisibilityNotifier2D" parent="Screen 3/SpawnLocations3"]
position = Vector2( 608, 96 )

[node name="Spawn16" type="VisibilityNotifier2D" parent="Screen 3/SpawnLocations3"]
position = Vector2( 704, 448 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Coins" type="Node2D" parent="."]

[node name="Domus" type="Node2D" parent="."]

[node name="Domu" parent="Domus" instance=ExtResource( 8 )]
position = Vector2( 1792, 288 )
tradeCost = 10
pathToBase = NodePath("../..")

[node name="Domu2" parent="Domus" instance=ExtResource( 8 )]
position = Vector2( 1856, 480 )
tradenum = 1
tradeCost = 20
pathToBase = NodePath("../..")

[node name="Body" parent="Domus/Domu2/Body-Collider" index="0"]
texture = ExtResource( 14 )

[node name="Trade" parent="Domus/Domu2/Message" index="1"]
texture = ExtResource( 15 )

[node name="Domu3" parent="Domus" instance=ExtResource( 8 )]
position = Vector2( 2528, 224 )
scale = Vector2( 1, -1 )
tradenum = 3
tradeCost = 20
pathToBase = NodePath("../..")

[node name="Body" parent="Domus/Domu3/Body-Collider" index="0"]
texture = ExtResource( 10 )

[node name="Trade" parent="Domus/Domu3/Message" index="1"]
texture = ExtResource( 16 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 943.071, 425.225 )
z_index = 1
z_as_relative = false

[node name="Gun" parent="Player" index="1"]
bullet = ExtResource( 9 )
bulletHolderPath = NodePath("../../Bullets")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 840, 300 )
current = true
limit_top = 0
limit_bottom = 0
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.5
drag_margin_right = 0.5
script = ExtResource( 6 )
follow = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 209.0
margin_top = 381.0
margin_right = 427.0
margin_bottom = 429.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
text = "Click to Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="Label" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = 535.0
margin_right = -128.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
text = "x3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/UI/CoinCount"]
margin_left = -56.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 56.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DomuCount" type="Label" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 960.0
margin_top = 535.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
text = "x3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/DomuCount"]
margin_left = -64.0
margin_bottom = 64.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBehinds" type="HBoxContainer" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -64.0
margin_right = 1645.0
margin_bottom = 544.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBehind" parent="CanvasLayer/UI/HealthBehinds" instance=ExtResource( 17 )]

[node name="HealthBehind2" type="TextureRect" parent="CanvasLayer/UI/HealthBehinds"]
margin_left = 334.0
margin_right = 638.0
margin_bottom = 608.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBehind3" type="TextureRect" parent="CanvasLayer/UI/HealthBehinds"]
margin_left = 668.0
margin_right = 972.0
margin_bottom = 608.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBars" type="HBoxContainer" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -64.0
margin_right = 1645.0
margin_bottom = 544.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBox" type="TextureRect" parent="CanvasLayer/UI/HealthBars"]
margin_right = 304.0
margin_bottom = 608.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBox2" type="TextureRect" parent="CanvasLayer/UI/HealthBars"]
margin_left = 334.0
margin_right = 638.0
margin_bottom = 608.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBox3" type="TextureRect" parent="CanvasLayer/UI/HealthBars"]
margin_left = 668.0
margin_right = 972.0
margin_bottom = 608.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Domus/Domu2"]

[editable path="Domus/Domu3"]

[editable path="Player"]
